# agent_harness

./: .env.example  .gitignore  README.md  pyproject.toml
canvases/: architecture-recommendation.canvas.tsx
examples/: pydantic_ai_quickstart.py
notebooks/: benchmark_analysis.ipynb  explore.ipynb  generate_report_csvs.py  new_architectures_validation.ipynb
reports/: 20260701_134442_run-all_pydantic-ai_adi-top-modules.json  20260701_134442_run-all_pydantic-ai_adi-top-modules_scored.json  20260701_improved_enterprise-react_adi-top-modules_scored.json  20260701_improved_enterprise-sql-react_adi-top-modules.json  20260701_improved_run-all_pydantic-ai_adi-top-modules.json  20260701_improved_run-all_pydantic-ai_adi-top-modules_scored.json  20260702_enterprise-codemode_adi-function-opportunity_scored.json  20260702_enterprise-react_adi-function-opportunity_scored.json  20260702_final2_enterprise-codemode_adi-function-opportunity_scored.json  20260705_123322_repeat3_enterprise-codemode_adi-disengagement-risk.json  20260705_123322_repeat3_enterprise-codemode_adi-executive-users.json  20260705_123322_repeat3_enterprise-codemode_adi-function-analysis.json  20260705_123322_repeat3_enterprise-codemode_adi-function-opportunity.json  20260705_123322_repeat3_enterprise-codemode_adi-module-ratings.json  20260705_123322_repeat3_enterprise-codemode_adi-monthly-trend.json  20260705_123322_repeat3_enterprise-codemode_adi-user-lookup.json  ground-truth.json  repeat3_enterprise-codemode_adi-top-modules_scored.json  run-all_scored.json
scripts/: _run_two_more_archs.sh  run_benchmark.sh  (+3 more)
(+387 files in other folders)
