[project]
name = "agent-harness-bench"
version = "0.1.0"
description = "Compare agent harnesses and agentic architectures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "typer>=0.12",
]

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai-slim[anthropic,openai,mcp,duckduckgo,logfire]>=1.105.0",
    "pydantic-ai-harness[code-mode,logfire]>=0.4.0",
    "langfuse",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
agent-bench = "agent_harness.cli:main"
enterprise-mcp = "agent_harness.mcp_server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
]
